[package]
name = "carlog"
version = "0.1.0"
authors = ["xj63 <xj63work@163.com>"]
description = "ticar2 log analysis and control tools."
repository = "https://github.com/xj63/carlog"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
clap_complete = "4.5.7"
clap_mangen = "0.2.22"
futures-util = { version = "0.3.30", features = ["sink"] }
ratatui = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
